# thothglyph-doc

./: .flake8  .gitignore  README.md  pyproject.toml
doc/language/: quick-reference.ja.md
test/custom/: main.tglyph
test/error/code/: missing-closer.tglyph
test/reader/md/custom/: main.md
test/reader/md/syntax/: example.c  h1-as-title.md  main.md  sub1.conf.py  sub1.md  sub2.tglyph  tortue.md
test/reader/md/syntax/sub/: sub1.md
test/reader/tglyph/custom/: main.tglyph  test.py
test/reader/tglyph/error/config/: illegal-config-text.tglyph  not-first-block.tglyph
test/reader/tglyph/error/custom/: missing-closer.tglyph
test/reader/tglyph/error/section/: no-space-after-symbol.tglyph  skip-level-1.tglyph
test/reader/tglyph/error/table/: different-columns.tglyph  illegal-list-table.tglyph  too-long-table-gen.py  too-long-table.tglyph
test/reader/tglyph/syntax/: main.tglyph  sub1.conf.py  sub1.tglyph  sub2.md  test-template.tglyph  test.py
test/reader/tglyph/syntax/sub/: sub1.tglyph
test/syntax/: main.tglyph  sub1.conf.py  sub1.tglyph
thothglyph/: error.py
thothglyph/app/: converter.py
thothglyph/ext/: blockdiag.py  graphviz.py  math.py  mermaid.py  plantuml.py  wavedrom.py
thothglyph/ext/tg_wavedrom/: __init__.py  bitfield.py  tspan.py
thothglyph/node/: logging.py  nd.py
thothglyph/reader/: __init__.py  md.py  reader.py  tglyph.py
thothglyph/template/html/: index.html
thothglyph/template/html/default/: index.html
thothglyph/template/html/preview/: index.html
thothglyph/template/htmls/default/: index.html
thothglyph/template/latex/: document-ja.tex
thothglyph/template/latex/default/: document-ja.tex
thothglyph/util/: svg.py
thothglyph/writer/: __init__.py  docx.py  html.py  htmls.py  latex.py  pdf.py  writer.py
